[gd_scene load_steps=17 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Cube.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cube_receiver.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/Montserrat-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Score.gd" type="Script" id=5]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=6]
[ext_resource path="res://Ball_receiver.tscn" type="PackedScene" id=7]
[ext_resource path="res://Triangle.tscn" type="PackedScene" id=8]
[ext_resource path="res://Triangle_receiver.tscn" type="PackedScene" id=9]
[ext_resource path="res://goal.gd" type="Script" id=10]
[ext_resource path="res://Timer.gd" type="Script" id=11]
[ext_resource path="res://you_won.gd" type="Script" id=12]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 30, 1, 30 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 60, 2, 60 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="Main" type="Node"]

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
mesh = SubResource( 2 )
material/0 = null

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.00916281, 0.999958, 0, -0.999958, 0.00916281, 0, 13.8286, 0 )
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="CameraPivot" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.87511, -0.483924, 0, 0.483924, 0.87511, 0, 0, 0 )

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 0.149691, 0.988733, 0, -0.988733, 0.149691, 0, 19.7286, 2.49007 )
projection = 1
size = 19.0

[node name="Cube" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.06286, 7.68072 )

[node name="Cube_receiver" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25371, 0, -8.53219 )

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI"]
margin_left = 11.9865
margin_top = 11.9864
margin_right = 112.986
margin_bottom = 43.9864
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score: 0"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="help" type="Label" parent="UI"]
margin_left = 7.28766
margin_top = 522.502
margin_right = 555.288
margin_bottom = 589.502
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Colide with a form to grab it
Press G to release the form you are holding"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="goal" type="Label" parent="UI"]
margin_left = 200.773
margin_top = 280.183
margin_right = 844.773
margin_bottom = 312.183
custom_colors/font_color = Color( 0.117647, 0.258824, 0.278431, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Put forms in the corresponding hole to gain points"
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="you_won" type="Label" parent="UI"]
visible = false
margin_left = 436.493
margin_top = 281.651
margin_right = 583.493
margin_bottom = 313.651
custom_colors/font_color = Color( 0.180392, 0.447059, 0.462745, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "YOU WON !"
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -7.32203, 0.570897, 7.25501 )

[node name="Ball_receiver" parent="." instance=ExtResource( 7 )]
transform = Transform( 2, 0, 0, 0, 0.5, 0, 0, 0, 2, 9.59443, -0.205653, -8.70722 )

[node name="Triangle" parent="." instance=ExtResource( 8 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 7.58087, 0.569984, 7.49762 )

[node name="Triangle_receiver" parent="." instance=ExtResource( 9 )]
transform = Transform( 2, 0, 0, 0, 0.2, 0, 0, 0, 2, -9.0041, -0.165225, -8.61682 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
script = ExtResource( 11 )
[connection signal="ready" from="." to="Timer" method="_on_Main_ready"]
[connection signal="erase_ball" from="Player" to="UI/Score" method="_on_Player_erase_ball"]
[connection signal="erase_ball" from="Player" to="Ball" method="_on_Player_erase_ball"]
[connection signal="erase_cube" from="Player" to="UI/Score" method="_on_Player_erase_cube"]
[connection signal="erase_cube" from="Player" to="Cube" method="_on_Player_erase_cube"]
[connection signal="erase_triangle" from="Player" to="UI/Score" method="_on_Player_erase_triangle"]
[connection signal="erase_triangle" from="Player" to="Triangle" method="_on_Player_erase_triangle"]
[connection signal="player_deposited_ball" from="Player" to="Ball" method="_on_Player_player_deposited_ball"]
[connection signal="player_deposited_cube" from="Player" to="Cube" method="_on_Player_player_deposited_cube"]
[connection signal="player_deposited_triangle" from="Player" to="Triangle" method="_on_Player_player_deposited_triangle"]
[connection signal="player_took_ball" from="Player" to="Ball" method="_on_Player_player_took_ball"]
[connection signal="player_took_cube" from="Player" to="Cube" method="_on_Player_player_took_cube"]
[connection signal="player_took_triangle" from="Player" to="Triangle" method="_on_Player_player_took_triangle"]
[connection signal="body_entered" from="Cube" to="Player" method="_on_Cube_body_entered"]
[connection signal="body_entered" from="Cube_receiver" to="Player" method="_on_Cube_receiver_body_entered"]
[connection signal="player_won" from="UI/Score" to="UI/you_won" method="_on_Score_player_won"]
[connection signal="body_entered" from="Ball" to="Player" method="_on_Ball_body_entered"]
[connection signal="body_entered" from="Ball_receiver" to="Player" method="_on_Ball_receiver_body_entered"]
[connection signal="body_entered" from="Triangle" to="Player" method="_on_Triangle_body_entered"]
[connection signal="body_entered" from="Triangle_receiver" to="Player" method="_on_Triangle_receiver_body_entered"]
[connection signal="timeout" from="Timer" to="UI/goal" method="_on_Timer_timeout"]
